(executable
 (name parse_pikatest)
 (public_name parse_pikatest)
 (libraries chupikapi)
 (modules parse_pikatest)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.ord ppx_deriving.eq)))

(executable
 (name semant_pikatest)
 (public_name semant_pikatest)
 (libraries chupikapi)
 (modules semant_pikatest)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.ord ppx_deriving.eq)))

(executable
 (name gen1_pikatest)
 (public_name gen1_pikatest)
 (libraries chupikapi)
 (modules gen1_pikatest)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.ord ppx_deriving.eq)))
